<resources>
    <string name="app_name">PhoneSecurAT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="summary_startBaseProfiling">Give a first set of moves to train the model</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_transparentAuthenticationService">Transparent Authentication Service</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This application is a live implementation from Mobile Authentication Services research work. It is led by master students from the UTAR Malaysia.</string>
    <string name="app_version">3.5</string>
    <string name="default_learningNotCompleted">Basic learning is incomplete, please finish the base profiling</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.google.com</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.google.com</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.google.com</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_startBaseProfiling">Start Base Profiling</string>
    <string name="title_runInBackground">Run in background</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
</resources>
