<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Model Training">

        <Preference
            android:summary="@string/summary_startBaseProfiling"
            android:title="@string/title_startBaseProfiling"
            android:key="settings_startBaseProfiling">
        </Preference>

        <Preference
            android:summary="This should only be necessary on first launch"
            android:title="Give admin rights for locking phone"
            android:key="button_admin">
        </Preference>

        <!--<Preference
            android:selectable="false"
            android:summary="@string/default_learningNotCompleted"
            android:defaultValue="@string/default_learningNotCompleted"
            android:title="Learning state" />-->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_transparentAuthenticationService">

        <SwitchPreference
            android:defaultValue="false"
            android:key="switchKey"
            android:title="@string/title_runInBackground">
            <intent
                android:targetPackage="my.utar.phonesecurat"
                android:targetClass="my.utar.phonesecurat.MyApp" />
        </SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>